--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<p>Hello Dali Zigomar !</p>
-	<audio autoplay width="10%"><source src="Désiré - Voyage voyage.weba"></source></audio>
+	<audio autoplay width="10%" controls><source src="Désiré - Voyage voyage.weba"></source></audio>
 <img src="glace.jpg" alt=""><img src="oo.jpeg" alt="">
 </body>
 </html>
