--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 	<p>Hello Dali Zigomar !</p>
 	<audio autoplay width="10%" controls><source src="./Désiré - Voyage voyage.weba"></source></audio>
-<img src="glace.jpg" alt=""><img src="oo.jpeg" alt="">
+<img src="glace.jpg" alt=""><img src="oo.jpg" alt="">
 </body>
 </html>
