--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
 	<p>Hello Dali Zigomar !</p>
 	<audio autoplay width="10%" controls><source src="dossier_1/Desireless-Voyage.weba"></source></audio>
-<img src="glace.jpg" alt=""><img src="oo.jpg" alt="">
-<a href="lecteurRadio2.html">lecteur Radio Zigomar</a>
+<img src="glace.jpg" alt=""><img src="oo.jpg" alt=""><br/>
+<a href="lecteurRadio2.html">lecteur Radio Zigomar</a><br/>
+<a href="mon lecteurBrut.html">lecteur Radio Zigomar</a><br/>
+<a href="monLecteurCS.html">lecteur Radio Zigomar</a><br/>
 </body>
 </html>
