--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<audio autoplay width="10%" controls><source src="dossier_1/Desireless-Voyage.weba"></source></audio>
 <img src="glace.jpg" alt=""><img src="oo.jpg" alt=""><br/>
 <a href="lecteurRadio2.html">lecteur Radio Zigomar</a><br/>
-<a href="mon lecteurBrut.html">lecteur Radio Zigomar</a><br/>
-<a href="monLecteurCS.html">lecteur Radio Zigomar</a><br/>
+<a href="mon lecteurBrut.html">lecteur Radio Zigomar (brut)</a><br/>
+<a href="monLecteurCS.html">lecteur Radio Zigomar (cs)</a><br/>
 </body>
 </html>
