ajout de la page traduction

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <a href="lecteurRadio2.html">lecteur Radio Zigomar</a><br/>
 <a href="mon lecteurBrut.html">lecteur Radio Zigomar (brut)</a><br/>
 <a href="monLecteurCS.html">lecteur Radio Zigomar (cs)</a><br/>
-	<a href="./importImages/index.html">importer Images</a><br/>
+<a href="./importImages/index.html">importer Images</a><br/>
+<a href="trrad.html">pour traduction</a><br/>
 </body>
 </html>
