--- a/trrad.html
+++ b/trrad.html
@@ -6,7 +6,7 @@
   <style>
     /* Cache le widget */
     #google_translate_element {
-      display: ;
+      display: none;
     }
   </style>
 </head>
@@ -45,4 +45,5 @@
   </script>
 
 </body>
+
 </html>
