Fix CSS selector for hiding Google Translate widget

--- a/trrad.html
+++ b/trrad.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <title>Auto-Translation</title>
   <style>
-    /* Cache le widget */
-    #google_translate_element {
-      display: none;
+   body #google_translate_element {
+     display: none;
     }
   </style>
 </head>
@@ -47,3 +46,4 @@
 </body>
 
 </html>
+
