Refactor HTML structure and styling for translation

--- a/trrad.html
+++ b/trrad.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8">
   <title>Auto-Translation</title>
   <style>
-   body #google_translate_element {
+   #google_translate_element {
+     display: none;
+    }
+	#:1.container {
+     display: none;
+    }
+	.VIpgJd-ZVi9od-ORHb {
      display: none;
     }
   </style>
@@ -46,4 +52,5 @@
 </body>
 
 </html>
+
 
