Enhance translation widget styles
Added a new CSS rule to hide elements with the class 'skiptranslate'.

--- a/trrad.html
+++ b/trrad.html
@@ -13,6 +13,9 @@
 	.VIpgJd-ZVi9od-ORHb {
      display: none;
     }
+	  .skiptranslate {
+     display: none;
+    }
   </style>
 </head>
 <body>
@@ -52,5 +55,6 @@
 </body>
 
 </html>
+
 
 
