--- a/trrad.html
+++ b/trrad.html
@@ -24,7 +24,7 @@
   <p>This page is originally in English.</p>
 
   <!-- Widget (même si caché, il est nécessaire) -->
-  <div id="google_translate_element"></div>
+  <div id="google_translate_element" style="visibility:hidden"></div>
 
   <!-- Initialisation de Google Translate -->
   <script type="text/javascript">
@@ -55,6 +55,7 @@
 </body>
 
 </html>
+
 
 
 
