Enhance translation page styling and visibility
Added styles to hide additional elements and maintain layout.

--- a/trrad.html
+++ b/trrad.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8">
   <title>Auto-Translation</title>
   <style>
-   #google_translate_element {
+    #google_translate_element {
+     display: none;
+    }
+	#:1.container {
+     display: none;
+    }
+	.VIpgJd-ZVi9od-ORHb {
+     display: none;
+    }
+	  .skiptranslate {
      display: none;
     }
   </style>
@@ -46,6 +55,7 @@
 </body>
 
 </html>
+
 
 
 
