--- a/trrad.html
+++ b/trrad.html
@@ -5,6 +5,9 @@
   <title>Export</title>
   <link rel="stylesheet" href="all.min.css" />
   <style>
+     html {
+      height :74%;
+    }
     html, body {
       background-color: #e76f51;
       height :74%;
@@ -114,5 +117,6 @@
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
+
 
 
