--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <a href="./importImages/index.html">importer Images</a><br/>
 <a href="trrad.html">pour traduction</a><br/>
 	<div class="col-xs-12 box"><h6>NOTE ET BLAGUE DU JOUR</h6><div class="col-xs-122 box">
-<embed id="textoo" src="https://zigomar007.github.io/s18/trrad.html"></embed>
+<embed id="textoo" src="trrad.html"></embed>
 </div></div>
 </body>
 </html>
