--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <a href="trrad.html">pour traduction</a><br/>
 	<div class="col-xs-12 box"><h6>NOTE ET BLAGUE DU JOUR</h6><div class="col-xs-122 box">
 <embed id="textoo" src="trrad.html"></embed>
+		<a href="BLAGUE.html">pour traduction</a><br/>
 </div></div>
 </body>
 </html>
