--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <a href="monLecteurCS.html">lecteur Radio Zigomar (cs)</a><br/>
 <a href="./importImages/index.html">importer Images</a><br/>
 <a href="trrad.html">pour traduction</a><br/>
-	<div class="col-xs-12 box"><h6>NOTE ET BLAGUE DU JOUR</h6><div class="col-xs-122 box">
-<embed id="textoo" src="trrad.html"></embed><br/>
-		<a href="BLAGUE.html">pour traduction</a><br/>
+<a href="BLAGUE.html">pour traduction</a><br/>
+<div class="col-xs-12 box"><h6>NOTE ET BLAGUE DU JOUR</h6><div class="col-xs-122 box">
+<embed id="textoo" src="trrad.html"></embed>
 </div></div>
+	
 </body>
 </html>
