--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 <div class="col-xs-12 box"><h6>NOTE ET BLAGUE DU JOUR</h6><div class="col-xs-122 box">
 <embed id="textoo" src="trrad.html"></embed>
 </div></div>
-	
+<a href="limoncello/limoncello.html">pour traduction</a><br/>
 </body>
 </html>
