Update Limoncello.html with relative paths

--- a/Limoncello/Limoncello.html
+++ b/Limoncello/Limoncello.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
-	<link rel="stylesheet" href="C:/mes recaps/SITE MES PAGES/MIEU/layout/derttpfonts.css">
-	<link rel="stylesheet" href="C:/mes recaps/SITE MES PAGES/MIEU/layout/progress infinity.css">
-	<link rel="stylesheet" href="C:/mes recaps/SITE MES PAGES/MIEU/layout/lescouleurs.css">
-	<link rel="stylesheet" href="C:/mes recaps/SITE MES PAGES/MIEU/layout/style.css">
-	<link rel="stylesheet" href="C:/mes recaps/SITE MES PAGES/MIEU/layout/blink.css">
+	<link rel="stylesheet" href="../layout/derttpfonts.css">
+	<link rel="stylesheet" href="../layout/progress infinity.css">
+	<link rel="stylesheet" href="../layout/lescouleurs.css">
+	<link rel="stylesheet" href="../layout/style.css">
+	<link rel="stylesheet" href="../layout/blink.css">
 	<style>
 	body {direction: ;}
 	pre {white-space: pre-line;
@@ -70,5 +70,6 @@ En fait, cette boisson au citron est désormais considérée comme la boisson na
 Cette boisson au citron est merveilleuse comme nettoyant pour le palais ou comme boisson après le dîner. Il est toujours servi bien frais pendant les mois d'été.
 
 <img src="310571475_476291081193537_2964541398170376945_n.jpg" class="imag"><img src="Italia-Limoncello.jpg" class="imag"><img src="Limoncello-1.jpg" class="imag"><img src="hqdefault.jpg" class="imag">
+
 
 
