Modify aj.html for iframe size adjustments
Updated iframe dimensions and removed fixed styles.

--- a/aj.html
+++ b/aj.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 <style>
-#preview-iframe {width:1396px;height:860px;}
+#preview-iframe {}
 </style>
 </head>
 
 <body>
-<iframe width="1102" height="620" src="https://www.youtube.com/embed/bNyUyrR0PHo" title="تغطية مباشرة | " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="1246" height="625" src="https://www.youtube.com/embed/bNyUyrR0PHo" title="تغطية مباشرة | " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 
